--- a/index.html
+++ b/index.html
@@ -3,12 +3,254 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Miami </title>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
-    <!-- Write your markup here -->
+    <div class="hero">
+      <div class="container">
+        <div class="header">
+          <a href="#" class="header__phone">
+            8 800 500 50 50
+          </a>
+          <div class="header__logo">
+            <a href="#">
+              <img src="images/logo.png"
+                   alt="miami condo kings"
+                   class="header__logo--img">
+            </a>
+          </div>
+          <a href="#" class="header__call">
+            call to order
+          </a>
 
-    <script type="text/javascript" src="scripts/main.js"></script>
+          <nav>
+            <ul class="main-menu">
+              <li class="main-menu__item">
+                <a href="#">Home</a>
+              </li>
+              <li class="main-menu__item">
+                <a href="#">About us</a>
+              </li>
+              <li class="main-menu__item">
+                <a href="#">Gallery</a>
+              </li>
+              <li class="main-menu__item">
+                <a href="#">Consultation</a>
+              </li>
+              <li class="main-menu__item">
+                <a href="#">Testimonials</a>
+              </li>
+              <li class="main-menu__item">
+                <a href="#">Contact</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+
+    <section class="best">
+        <div class="container">
+          <div class="best__intro">
+             Miami <strong>best</strong> <br>
+             Really <span>— <br>
+             this</span>
+          </div>
+
+          <div class="best__text">
+            <strong>Over 50 years experience in love.</strong><br>Mazel and VA Tsukkerman in his "Analysis of musical
+            works."Pointillism, which originated in the music of the early twentieth century, microforms, found a distant historical.
+
+            <ol>
+              <li>The market leader in real estate since 2003 </li>
+              <li>Awards Real Estate Company, 2010, 2011, 2013</li>
+              <li>More than 200 satisfied customers premium segment</li>
+              <li>We focus only on new buildings and high-level  doskanalno know this area better than other specialists. </li>
+              <li> Working directly with developers - so have more  useful information about the profitable deals</li>
+            </ol>
+            <p>
+              <strong>We will never late! <br>Guaranteed secure transaction - 100%</strong>
+            </p>
+          </div>
+
+
+        </div>
+    </section>
+
+    <section class="gallery">
+      <div class="container">
+        <h2 class="section__title">
+          Gallery
+        </h2>
+
+        <div class="apart">
+          <div class="apart__photos apart__top">
+            <div class="apart__photo--top-left"></div>
+            <div class="apart__photo--top-right"></div>
+          </div>
+          <h2>Marina Palms / <span>North Miami Beach, FL 33162</span></h2>
+        </div>
+
+        <div class="apart apart__center">
+          <div class="apart__photos">
+            <div class="apart__photo--center-left"></div>
+            <div class="apart__photo--center-right"></div>
+          </div>
+          <h2>Marina Palms / <span>North Miami Beach, FL 33162</span></h2>
+        </div>
+
+        <div class="apart apart__bottom">
+          <div class="apart__photos">
+            <div class="apart__photo--bottom-left"></div>
+            <div class="apart__photo--bottom-right"></div>
+          </div>
+          <h2>Marina Palms / <span>North Miami Beach, FL 33162</span></h2>
+        </div>
+
+        <a href="#" class="button button__inline">view all</a>
+      </div>
+    </section>
+
+    <section class="consultation">
+      <div class="container">
+        <h2 class="section__title">
+          Consultation
+        </h2>
+
+        <div class="consultation__intro">
+          <h2>How long have <br> you do yourself a gift?</h2>
+          <p>
+            The procedural change mezzo forte starts izoritmichesky pickup at these moments stop LA Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early twentieth century, microforms, found a distant historical
+          </p>
+        </div>
+
+        <div class="consultation__form">
+          <div class="form">
+            <div class="form__field">
+              <input type="text" placeholder="Name" class="input">
+            </div>
+
+            <div class="form__field">
+              <input type="tel" placeholder="Phone" class="input">
+            </div>
+
+            <div class="form__field">
+              <input type="email" placeholder="Email" class="input">
+            </div>
+
+            <div class="form__submit">
+              <button class="button">consultation</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="testimonials">
+      <div class="container">
+        <h2 class="section__title">
+          Testimonials
+        </h2>
+
+        <div class="testimonials__wrapper">
+          <div class="testimonials__person">
+            <div class="testimonials__person--photo"></div>
+
+            <h3 class="testimonials__person--name">Stev Joni</h3>
+
+            <div class="testimonials__person--position">Founder Lucoil </div>
+
+            <div class="testimonials__person--description">
+              <p>
+                Nice work, Certificates National Association of Realtors (USA).
+              </p>
+            </div>
+          </div>
+
+          <div class="testimonials__person">
+            <div class="testimonials__person--photo"></div>
+
+            <h3 class="testimonials__person--name">Stev Joni </h3>
+
+            <div class="testimonials__person--position">Founder Lucoil </div>
+
+            <div class="testimonials__person--description">
+              <p>
+                Nice work, Certificates National Association of Realtors (USA).
+              </p>
+            </div>
+          </div>
+
+          <div class="testimonials__person">
+            <div class="testimonials__person--photo"></div>
+
+            <h3 class="testimonials__person--name">Stev Joni</h3>
+
+            <div class="testimonials__person--position">Founder Lucoil </div>
+
+            <div class="testimonials__person--description">
+              <p>
+                Nice work, Certificates National Association of Realtors (USA).
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact">
+      <div class="container">
+        <h2 class="section__title">
+          Contact
+        </h2>
+
+        <div class="contact__intro">
+          <p>
+            <a href="mailto:hello@miami.com">Hello@miami.com</a>
+          </p>
+          <p>8 800 678 78 78 <br>8 800 700 98 98</p>
+          <p>
+            400 first ave. n.suite 700 <br>
+            Minneapolis, MN 55401
+          </p>
+        </div>
+
+        <div class="contact__form">
+          <div class="form">
+            <div class="form__field">
+              <input type="text" placeholder="Name" class="input">
+            </div>
+
+            <div class="form__field">
+              <input type="email" placeholder="Email" class="input">
+            </div>
+
+            <div class="form__field">
+              <textarea name="message" class="textarea" placeholder="Message"></textarea>
+            </div>
+
+            <div class="form__submit">
+              <button class="button">Write to us</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__logo">
+        <a href="#">
+          <img src="images/logo.png"
+               alt="miami condo kings"
+               class="header__logo--img">
+        </a>
+      </div>
+
+      <div class="footer__copy">
+        © 2013 Miami.
+      </div>
+    </footer>
   </body>
 </html>
