--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="hero">
         <div class="container">
             <div class="header">
-                <a href="#" class="header__phone">
+                <a href="tel:" class="header__phone">
                     8 800 500 50 50
                 </a>
                 <div class="header__logo">
@@ -22,7 +22,7 @@
                              class="header__logo--img">
                     </a>
                 </div>
-                <a href="#" class="header__call">
+                <a href="tel:" class="header__call">
                     call to order
                 </a>
             </div>
@@ -52,35 +52,35 @@
 
     <section class="best section">
         <div class="container clearfix">
-            <div class="best__intro">
-                Miami <strong>best</strong> <br>
-                Really <span>— <br>
+            <div class="best__description">
+                <div class="best__intro">
+                    Miami <strong>best</strong> <br>
+                    Really <span>— <br>
              this</span>
+                </div>
+
+                <div class="best__text textual">
+                    <strong>Over 50 years experience in love.</strong><br>Mazel and VA Tsukkerman in his "Analysis of
+                    musical
+                    works."Pointillism, which originated in the music of the early twentieth century, microforms, found a
+                    distant historical.
+
+                    <ol>
+                        <li>The market leader in real estate since 2003</li>
+                        <li>Awards Real Estate Company, 2010, 2011, 2013</li>
+                        <li>More than 200 satisfied customers premium segment</li>
+                        <li>We focus only on new buildings and high-level this area better than other
+                            specialist.
+                        </li>
+                        <li>Working directly with developers - so have more useful information about the profitable
+                            deals
+                        </li>
+                    </ol>
+                    <p>
+                        <strong>We will never late! <br> Guaranteed secure transaction - 100%</strong>
+                    </p>
+                </div>
             </div>
-
-            <div class="best__text textual">
-                <strong>Over 50 years experience in love.</strong><br>Mazel and VA Tsukkerman in his "Analysis of
-                musical
-                works."Pointillism, which originated in the music of the early twentieth century, microforms, found a
-                distant historical.
-
-                <ol>
-                    <li>The market leader in real estate since 2003</li>
-                    <li>Awards Real Estate Company, 2010, 2011, 2013</li>
-                    <li>More than 200 satisfied customers premium segment</li>
-                    <li>We focus only on new buildings and high-level this area better than other
-                        specialist.
-                    </li>
-                    <li>Working directly with developers - so have more useful information about the profitable
-                        deals
-                    </li>
-                </ol>
-                <p>
-                    <strong>We will never late! <br> Guaranteed secure transaction - 100%</strong>
-                </p>
-            </div>
-
-
         </div>
     </section>
 
@@ -96,7 +96,10 @@
                     <div class="apart__photo apart__photo--top-left"></div>
                     <div class="apart__photo apart__photo--top-right"></div>
                 </div>
-                <h2>Marina Palms / <span>North Miami Beach, FL 33162</span></h2>
+                <h2>Marina Palms /
+                    <a href="https://www.google.com.ua/maps/place/%D0%9D%D0%BE%D1%80%D1%82+%D0%9C%D0%B0%D1%8F%D0%BC%D0%B8+%D0%91%D0%B8%D1%87,+%D0%A4%D0%BB%D0%BE%D1%80%D0%B8%D0%B4%D0%B0+33162,+%D0%A1%D0%A8%D0%90/@25.9188815,-80.1786965,13.96z/data=!4m5!3m4!1s0x88d9addb1b652001:0x525bd42381a2a4cf!8m2!3d25.9260794!4d-80.1819268"
+                        target="_blank" rel="noopener"
+                        class="apart__map">North Miami Beach, FL 33162</a></h2>
             </div>
 
             <div class="apart apart__center">
@@ -104,7 +107,9 @@
                     <div class="apart__photo apart__photo--center-left"></div>
                     <div class="apart__photo apart__photo--center-right"></div>
                 </div>
-                <h2>Marina Palms / <span>North Miami Beach, FL 33162</span></h2>
+                <h2>Marina Palms / <a
+                        href="https://www.google.com.ua/maps/place/%D0%9D%D0%BE%D1%80%D1%82+%D0%9C%D0%B0%D1%8F%D0%BC%D0%B8+%D0%91%D0%B8%D1%87,+%D0%A4%D0%BB%D0%BE%D1%80%D0%B8%D0%B4%D0%B0+33162,+%D0%A1%D0%A8%D0%90/@25.9188815,-80.1786965,13.96z/data=!4m5!3m4!1s0x88d9addb1b652001:0x525bd42381a2a4cf!8m2!3d25.9260794!4d-80.1819268"
+                        target="_blank" rel="noopener" class="apart__map">North Miami Beach, FL 33162</a></h2>
             </div>
 
             <div class="apart apart__bottom">
@@ -112,7 +117,9 @@
                     <div class="apart__photo apart__photo--bottom-left"></div>
                     <div class="apart__photo apart__photo--bottom-right"></div>
                 </div>
-                <h2>Marina Palms / <span>North Miami Beach, FL 33162</span></h2>
+                <h2>Marina Palms / <a
+                        href="https://www.google.com.ua/maps/place/%D0%9D%D0%BE%D1%80%D1%82+%D0%9C%D0%B0%D1%8F%D0%BC%D0%B8+%D0%91%D0%B8%D1%87,+%D0%A4%D0%BB%D0%BE%D1%80%D0%B8%D0%B4%D0%B0+33162,+%D0%A1%D0%A8%D0%90/@25.9188815,-80.1786965,13.96z/data=!4m5!3m4!1s0x88d9addb1b652001:0x525bd42381a2a4cf!8m2!3d25.9260794!4d-80.1819268" rel="noopener" target="_blank"
+                        class="apart__map">North Miami Beach, FL 33162</a></h2>
             </div>
 
             <div class="gallery__bottom">
@@ -177,7 +184,7 @@
 
                     <div class="testimonials__person--description">
                         <p>
-                          When my lovely valley of steam rises and half-day sun is above an impermeable. thicket
+                            When my lovely valley of steam rises and half-day sun is above an impermeable. thicket
                         </p>
                     </div>
                 </div>
@@ -185,15 +192,15 @@
                 <div class="testimonials__person">
                     <div class="testimonials__person--photo photo-2"></div>
 
-                  <h3 class="testimonials__person--name">Alisher Usmanov</h3>
+                    <h3 class="testimonials__person--name">Alisher Usmanov</h3>
 
-                  <div class="testimonials__person--position">Ural Steel</div>
+                    <div class="testimonials__person--position">Ural Steel</div>
 
                     <div class="testimonials__person--description">
                         <p>
-                          My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I
-                          enjoy with all my heart. I'm all alone and blissfully happy in the local edge. As if created
-                          for the likes of me.
+                            My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I
+                            enjoy with all my heart. I'm all alone and blissfully happy in the local edge. As if created
+                            for the likes of me.
                         </p>
                     </div>
                 </div>
@@ -203,7 +210,7 @@
 
                     <h3 class="testimonials__person--name">Stev Joni</h3>
 
-                  <div class="testimonials__person--position">Founder Lucoil</div>
+                    <div class="testimonials__person--position">Founder Lucoil</div>
 
                     <div class="testimonials__person--description">
                         <p>
